led-dimmer-6ch: moved settings to eeprom, added set/name, set/location, set/fade_rate

--- a/devices/led-dimmer-6ch/Makefile
+++ b/devices/led-dimmer-6ch/Makefile
@@ -4,4 +4,6 @@ all: $(PROJECT)
 
 APPS = mqtt-service myha myha-udp-client
 
+led-dimmer-6ch.c: led-dimmer-6ch-eeprom.h
+
 include ../../Makefile.include
