led-dimmer-6ch: added set/hue, set/saturation, set/brightness

--- a/devices/led-dimmer-6ch/Makefile
+++ b/devices/led-dimmer-6ch/Makefile
@@ -3,6 +3,7 @@ PROJECT?=led-dimmer-6ch
 all: $(PROJECT)
 
 APPS = mqtt-service myha myha-udp-client
+PROJECT_SOURCEFILES += colour-space.c
 
 led-dimmer-6ch.c: led-dimmer-6ch-eeprom.h
 
